feat: adiciona configuraçao do head do arquivo html, inserindo meta tags de description, keyboards e author. Inserido titulo e favicon do projeto

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Explore a excelência no fornecimento de Gás Liquefeito de Petróleo (GLP) com a Gás Service, líder inovadora do setor. Nosso site responsivo, desenvolvido com tecnologias de última geração como TypeScript, ReactJS e Tailwind CSS, oferece uma experiência envolvente em todos os dispositivos. Seja bem-vindo à nossa plataforma integrada, onde simplicidade encontra modernização, conectando consumidores a uma rede nacional de confiança e conveniência. Descubra uma forma única de adquirir gás, com produtos de qualidade, um ecossistema conectado de fornecedores e a facilidade de um sistema de login seguro. Fundada por Petrick Wilker e Gian Victor, a Gás Service está moldando o futuro da distribuição de GLP, garantindo não apenas produtos confiáveis, mas também uma jornada de compra que prioriza a satisfação do cliente. Faça parte da nossa história, onde cada botijão entregue é mais que um produto; é a garantia de uma experiência inovadora e confiável em Gás Liquefeito de Petróleo."/>
+    <meta name="keyboards" content="Gás Liquefeito de Petróleo, GLP residencial, Distribuição de gás, Compra de cilindro de gás, Petrick Wilker, Gian Victor, Inovação em GLP, Eficiência energética, Sistema integrado de gás, Compra online de gás, Cilindro P13, Cilindro P20, Cilindro P45, Experiência do usuário, Login seguro, Ecossistema de fornecedores, Qualidade e segurança, Modernização na compra de gás, Responsividade do site, Aplicativo mobile Gás Service, Entrega de gás confiável, Atendimento nacional, Petróleo e gás, Venda de botijão de gás, Conveniência na compra de GLP."/>
+    <meta name="author" content="Matheus Farias" />
+
+    <title>Gás Service</title>
+
+    <link rel="shortcut icon" href="./src/assets/favicon.svg" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
